iOS small bug fix

--- a/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
+++ b/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ils-E8-eVe">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ils-E8-eVe">
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -134,12 +134,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ils-E8-eVe" firstAttribute="top" secondItem="Cte-dC-tuF" secondAttribute="bottom" constant="40" id="CyY-iC-rXP"/>
+                            <constraint firstItem="ils-E8-eVe" firstAttribute="top" secondItem="Cte-dC-tuF" secondAttribute="bottom" constant="-64" id="CyY-iC-rXP"/>
                             <constraint firstAttribute="centerX" secondItem="fwW-Yz-V12" secondAttribute="centerX" constant="9" id="DSv-Iw-soW"/>
-                            <constraint firstItem="fwW-Yz-V12" firstAttribute="top" secondItem="ils-E8-eVe" secondAttribute="bottom" constant="28" id="Gzp-E1-buD"/>
+                            <constraint firstItem="fwW-Yz-V12" firstAttribute="top" secondItem="ils-E8-eVe" secondAttribute="bottom" constant="132" id="Gzp-E1-buD"/>
                             <constraint firstItem="orK-ai-tZn" firstAttribute="centerX" secondItem="fwW-Yz-V12" secondAttribute="centerX" constant="19" id="Txb-VY-wr2"/>
                             <constraint firstItem="orK-ai-tZn" firstAttribute="top" secondItem="fwW-Yz-V12" secondAttribute="bottom" constant="32" id="pQO-Gx-sYn"/>
-                            <constraint firstItem="ils-E8-eVe" firstAttribute="centerX" secondItem="6iw-sc-vxU" secondAttribute="centerX" constant="-1.5" id="z18-p4-WJE"/>
+                            <constraint firstItem="ils-E8-eVe" firstAttribute="centerX" secondItem="6iw-sc-vxU" secondAttribute="centerX" constant="-160" id="z18-p4-WJE"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Informations" id="30b-wz-jms"/>
@@ -241,10 +241,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZF-x0-6Kv">
-                                <rect key="frame" x="168" y="379" width="152" height="103"/>
+                                <rect key="frame" x="152" y="380" width="152" height="103"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZz-5h-AuL">
-                                        <rect key="frame" x="83" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="90" y="0.0" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="Wqs-nL-Xaq"/>
                                         </constraints>
@@ -258,7 +258,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="XZz-5h-AuL" firstAttribute="top" secondItem="dZF-x0-6Kv" secondAttribute="top" id="40u-jC-kKG"/>
-                                    <constraint firstItem="XZz-5h-AuL" firstAttribute="leading" secondItem="dZF-x0-6Kv" secondAttribute="leading" constant="83" id="9cd-UQ-G6r"/>
+                                    <constraint firstItem="XZz-5h-AuL" firstAttribute="leading" secondItem="dZF-x0-6Kv" secondAttribute="leading" constant="90" id="9cd-UQ-G6r"/>
+                                    <constraint firstAttribute="trailing" secondItem="XZz-5h-AuL" secondAttribute="trailing" constant="2" id="Pl8-5X-5dY"/>
                                     <constraint firstAttribute="height" constant="103" id="a1p-eA-TrP"/>
                                     <constraint firstAttribute="width" constant="152" id="jM0-Hp-jVf"/>
                                     <constraint firstAttribute="bottom" secondItem="XZz-5h-AuL" secondAttribute="bottom" constant="43" id="oMf-6N-aMu"/>
@@ -267,8 +268,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dZF-x0-6Kv" firstAttribute="leading" secondItem="UCK-Zp-MJZ" secondAttribute="leading" constant="168" id="I87-p2-3V9"/>
-                            <constraint firstItem="Gjh-Cj-COu" firstAttribute="top" secondItem="dZF-x0-6Kv" secondAttribute="bottom" constant="37" id="g3h-TV-Kvw"/>
+                            <constraint firstItem="dZF-x0-6Kv" firstAttribute="trailing" secondItem="UCK-Zp-MJZ" secondAttribute="trailingMargin" id="2bP-0s-yFg"/>
+                            <constraint firstItem="Gjh-Cj-COu" firstAttribute="top" secondItem="dZF-x0-6Kv" secondAttribute="bottom" constant="36" id="g3h-TV-Kvw"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Family Parking" id="B3U-yF-ONi">
