--- a/Android/FamilyParking2/app/src/main/res/layout/widget.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/widget.xml
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="@dimen/widget_margin"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/card_layout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <View
+            android:id="@+id/divider"
+            android:layout_width="0.01dp"
+            android:layout_height="0.01dp"
             android:layout_centerInParent="true"
-            android:text="WIDGET"/>
+            android:visibility="invisible"/>
+
+        <Button
+            android:id="@+id/toUnparkWidget"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_toLeftOf="@id/divider"
+            android:visibility="visible"
+            android:clickable="true"
+            android:background="@drawable/button_wheel"/>
+
+        <Button
+            android:id="@+id/toParkWidget"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_toRightOf="@id/divider"
+            android:visibility="visible"
+            android:clickable="true"
+            android:background="@drawable/button_park"/>
 
     </RelativeLayout>
 
