--- a/Android/FamilyParking2/app/src/main/res/layout/widget.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/widget.xml
@@ -6,8 +6,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="65dp"
         android:orientation="horizontal"
         android:background="@color/transparent">
 
