--- a/Android/FamilyParking2/app/src/main/res/values/styles.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/styles.xml
@@ -21,6 +21,9 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="colorPrimary">@color/transparent</item>
+        <item name="colorPrimaryDark">@color/transparent</item>
+        <item name="colorAccent">@color/transparent</item>
     </style>
 
     <style name="TwoWayView">
