--- a/Android/FamilyParking2/app/src/main/res/layout/notified_statistic.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/notified_statistic.xml
@@ -3,7 +3,8 @@
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin = "10dp">
+    android:layout_margin = "10dp"
+    android:background="@drawable/card_layout">
 
     <RelativeLayout
         android:id="@+id/sample_info"
