--- a/Android/FamilyParking/app/src/main/res/drawable/circle_blue_shadow_dark.xml
+++ b/Android/FamilyParking/app/src/main/res/drawable/circle_blue_shadow_dark.xml
@@ -17,7 +17,7 @@
         android:top="0dp"
         android:bottom="3dp">
         <shape android:shape="oval">
-            <solid android:color="@color/blue" />
+            <solid android:color="@color/dark_blue" />
         </shape>
     </item>
 </layer-list>
