--- a/Android/FamilyParking/app/src/main/res/drawable/circle_blue_shadow_dark_clicked.xml
+++ b/Android/FamilyParking/app/src/main/res/drawable/circle_blue_shadow_dark_clicked.xml
@@ -4,7 +4,7 @@
         <shape android:shape="oval">
             <gradient
                 android:startColor="@color/black_strong_transparent"
-                android:endColor="@color/black_light_light_transparent"
+                android:endColor="@color/black_dark_transparent"
                 android:angle="270"/>
 
             <corners android:radius="2dp" />
@@ -17,7 +17,7 @@
         android:top="0dp"
         android:bottom="3dp">
         <shape android:shape="oval">
-            <solid android:color="@color/dark_blue" />
+            <solid android:color="@color/ligth_blue" />
         </shape>
     </item>
 </layer-list>
