--- a/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
+++ b/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Q4D-Jx-ms8">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -312,7 +313,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="11J-Hw-der" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1098" y="589"/>
+            <point key="canvasLocation" x="1666" y="-999"/>
         </scene>
         <!--Groups-->
         <scene sceneID="NTN-zW-xNF">
@@ -344,7 +345,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zL0-Dn-fDq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-664" y="589"/>
+            <point key="canvasLocation" x="2100" y="-999"/>
         </scene>
         <!--Add Group View Controller-->
         <scene sceneID="suH-nf-WQZ">
@@ -403,7 +404,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SF3-CP-ACG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-246" y="589"/>
+            <point key="canvasLocation" x="2518" y="-999"/>
         </scene>
         <!--Which Car?-->
         <scene sceneID="LKh-we-fgq">
@@ -439,7 +440,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0nt-ys-qJC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-244" y="-119"/>
+            <point key="canvasLocation" x="-240" y="-63"/>
         </scene>
         <!--Cars-->
         <scene sceneID="Fo5-ae-B73">
@@ -473,7 +474,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vpo-9j-J0N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="190" y="-119"/>
+            <point key="canvasLocation" x="608" y="-63"/>
         </scene>
         <!--Single Car Users View Controller-->
         <scene sceneID="73y-M8-k4x">
@@ -505,7 +506,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sYn-Pb-675" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="190" y="583"/>
+            <point key="canvasLocation" x="178" y="651"/>
         </scene>
         <!--Insert your Car Name-->
         <scene sceneID="IOr-9X-Xx9">
@@ -564,7 +565,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jks-Em-j2U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="644" y="-119"/>
+            <point key="canvasLocation" x="1014" y="-63"/>
         </scene>
     </scenes>
     <resources>
@@ -580,6 +581,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="os5-nP-kpf"/>
+        <segue reference="TFs-jk-wHQ"/>
     </inferredMetricsTieBreakers>
 </document>
